Support both old and modern OmniSharp